--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -14,35 +14,35 @@ jobs:
             distro: alpine
             py_label: py38_
             conda_md5: d63adf39f2c220950a063e0529d4ff74
-          - conda_ver: 4.8.3
-            py_ver: 3.8
-            distro: alpine
-            py_label: py38_
-            conda_md5: d63adf39f2c220950a063e0529d4ff74
-          - conda_ver: 4.8.3
-            py_ver: 3.7
-            distro: alpine
-            py_label: py37_
-            conda_md5: 751786b92c00b1aeae3f017b781018df
-          - conda_ver: 4.5.4
-            py_ver: 3.6
-            distro: alpine
-            conda_md5: a946ea1d0c4a642ddf0c3a26a18bb16d
+          # - conda_ver: 4.8.3
+          #   py_ver: 3.8
+          #   distro: alpine
+          #   py_label: py38_
+          #   conda_md5: d63adf39f2c220950a063e0529d4ff74
+          # - conda_ver: 4.8.3
+          #   py_ver: 3.7
+          #   distro: alpine
+          #   py_label: py37_
+          #   conda_md5: 751786b92c00b1aeae3f017b781018df
+          # - conda_ver: 4.5.4
+          #   py_ver: 3.6
+          #   distro: alpine
+          #   conda_md5: a946ea1d0c4a642ddf0c3a26a18bb16d
           - conda_ver: 4.9.0
             py_ver: 3.9
             distro: debian
             py_label: py38_
-          - conda_ver: 4.8.3
-            py_ver: 3.8
-            distro: debian
-            py_label: py38_
-          - conda_ver: 4.8.3
-            py_ver: 3.7
-            distro: debian
-            py_label: py37_
-          - conda_ver: 4.5.4
-            py_ver: 3.6
-            distro: debian
+          # - conda_ver: 4.8.3
+          #   py_ver: 3.8
+          #   distro: debian
+          #   py_label: py38_
+          # - conda_ver: 4.8.3
+          #   py_ver: 3.7
+          #   distro: debian
+          #   py_label: py37_
+          # - conda_ver: 4.5.4
+          #   py_ver: 3.6
+          #   distro: debian
     env:
       CONDA_VER: ${{matrix.conda_ver}}
       PY_VER: ${{matrix.py_ver}}
@@ -70,32 +70,34 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        include:
-          - conda_ver: 4.9.0
-            py_ver: 3.9
-            distro: alpine
-          - conda_ver: 4.8.3
-            py_ver: 3.8
-            distro: alpine
-          - conda_ver: 4.8.3
-            py_ver: 3.7
-            distro: alpine
-          - conda_ver: 4.5.4
-            py_ver: 3.6
-            distro: alpine
-          - conda_ver: 4.9.0
-            py_ver: 3.9
-            distro: debian
-          - conda_ver: 4.8.3
-            py_ver: 3.8
-            distro: debian
-          - conda_ver: 4.8.3
-            py_ver: 3.7
-            distro: debian
-          - conda_ver: 4.5.4
-            py_ver: 3.6
-            distro: debian
+      matrix: ${{needs.build.strategy.matrix}}
+    # strategy:
+    #   matrix:
+    #     include:
+    #       - conda_ver: 4.9.0
+    #         py_ver: 3.9
+    #         distro: alpine
+    #       - conda_ver: 4.8.3
+    #         py_ver: 3.8
+    #         distro: alpine
+    #       - conda_ver: 4.8.3
+    #         py_ver: 3.7
+    #         distro: alpine
+    #       - conda_ver: 4.5.4
+    #         py_ver: 3.6
+    #         distro: alpine
+    #       - conda_ver: 4.9.0
+    #         py_ver: 3.9
+    #         distro: debian
+    #       - conda_ver: 4.8.3
+    #         py_ver: 3.8
+    #         distro: debian
+    #       - conda_ver: 4.8.3
+    #         py_ver: 3.7
+    #         distro: debian
+    #       - conda_ver: 4.5.4
+    #         py_ver: 3.6
+    #         distro: debian
     env:
       CONDA_VER: ${{matrix.conda_ver}}
       PY_VER: ${{matrix.py_ver}}
@@ -119,32 +121,34 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        include:
-          - conda_ver: 4.9.0
-            py_ver: 3.9
-            distro: alpine
-          - conda_ver: 4.8.3
-            py_ver: 3.8
-            distro: alpine
-          - conda_ver: 4.8.3
-            py_ver: 3.7
-            distro: alpine
-          - conda_ver: 4.5.4
-            py_ver: 3.6
-            distro: alpine
-          - conda_ver: 4.9.0
-            py_ver: 3.9
-            distro: debian
-          - conda_ver: 4.8.3
-            py_ver: 3.8
-            distro: debian
-          - conda_ver: 4.8.3
-            py_ver: 3.7
-            distro: debian
-          - conda_ver: 4.5.4
-            py_ver: 3.6
-            distro: debian
+      matrix: ${{needs.test.strategy.matrix}}
+    # strategy:
+    #   matrix:
+    #     include:
+    #       - conda_ver: 4.9.0
+    #         py_ver: 3.9
+    #         distro: alpine
+    #       - conda_ver: 4.8.3
+    #         py_ver: 3.8
+    #         distro: alpine
+    #       - conda_ver: 4.8.3
+    #         py_ver: 3.7
+    #         distro: alpine
+    #       - conda_ver: 4.5.4
+    #         py_ver: 3.6
+    #         distro: alpine
+    #       - conda_ver: 4.9.0
+    #         py_ver: 3.9
+    #         distro: debian
+    #       - conda_ver: 4.8.3
+    #         py_ver: 3.8
+    #         distro: debian
+    #       - conda_ver: 4.8.3
+    #         py_ver: 3.7
+    #         distro: debian
+    #       - conda_ver: 4.5.4
+    #         py_ver: 3.6
+    #         distro: debian
     env:
       CONDA_VER: ${{matrix.conda_ver}}
       PY_VER: ${{matrix.py_ver}}
