--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,8 +1,7 @@
 name: Development
 on:
   push:
-    branches: [master]
-  pull_request: null
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -115,7 +114,7 @@ jobs:
           docker run --rm "$REF" $SHELL_CMD -c "python --version 2>&1" | grep "$PY_VER"
           docker run --rm "$REF" $SHELL_CMD -c "cat /etc/issue 2>&1" | grep -i "$DISTRO"
   publish:
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     needs: test
     runs-on: ubuntu-latest
     strategy:
@@ -171,7 +170,7 @@ jobs:
                   && docker push "${IMAGE}:latest" \
               || echo "skipping 'latest' tag..."
   publish-docs:
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
