--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -54,7 +54,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Compile image
         run: |
-          docker-compose -f dist/${DISTRO}/docker-compose.yml build
+          docker-compose -f dist/${DISTRO}/docker-compose.yaml build
           IMAGE=$(docker images --filter "reference=datajoint/*" --format "{{.Repository}}")
           TAG=$(docker images --filter "reference=datajoint/*" --format "{{.Tag}}")
           docker save "${IMAGE}:${TAG}" | gzip > "${CONDA_VER}-py${PY_VER}-${DISTRO}.tar.gz"
