--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -159,8 +159,10 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           docker load < "${CONDA_VER}-py${PY_VER}-${DISTRO}.tar.gz"
-          IMAGE=$(docker images --filter "reference=datajoint/*" --format "{{.Repository}}")
-          TAG=$(docker images --filter "reference=datajoint/*" --format "{{.Tag}}")
+          IMAGE=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep datajoint\
+              | awk -F: '{print $1}')
+          TAG=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep datajoint\
+              | awk -F: '{print $2}')
           docker push "${IMAGE}:{TAG}"
           docker tag "${IMAGE}:${TAG}" "${IMAGE}:${TAG}-${GITHUB_SHA:0:7}"
           docker push "${IMAGE}:${TAG}-${GITHUB_SHA:0:7}"
@@ -190,6 +192,7 @@ jobs:
           rm -R gh-pages/*
           cp -r docs/_build/html/* gh-pages/
           cp .gitignore gh-pages/
+          touch gh-pages/.nojekyll
           cd gh-pages
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
