--- a/config/.env
+++ b/config/.env
@@ -1,12 +1,12 @@
-# CONDA_VER=4.9.0
-# PY_VER=3.9
-# PY_LABEL=py38_
-# CONDA_MD5=d63adf39f2c220950a063e0529d4ff74
-
-CONDA_VER=4.8.3
-PY_VER=3.8
+CONDA_VER=4.9.0
+PY_VER=3.9
 PY_LABEL=py38_
 CONDA_MD5=d63adf39f2c220950a063e0529d4ff74
+
+# CONDA_VER=4.8.3
+# PY_VER=3.8
+# PY_LABEL=py38_
+# CONDA_MD5=d63adf39f2c220950a063e0529d4ff74
 
 # CONDA_VER=4.8.3
 # PY_VER=3.7
@@ -16,3 +16,5 @@ CONDA_MD5=d63adf39f2c220950a063e0529d4ff74
 # CONDA_VER=4.5.4
 # PY_VER=3.6
 # CONDA_MD5=a946ea1d0c4a642ddf0c3a26a18bb16d
+
+HOST_UID=1000
