--- a/config/.env
+++ b/config/.env
@@ -1,20 +1,33 @@
-CONDA_VER=4.9.0
-PY_VER=3.9
-PY_LABEL=py38_
-CONDA_MD5=d63adf39f2c220950a063e0529d4ff74
+## build
 
-# CONDA_VER=4.8.3
+CONDA_VER=4.10.3
+PY_VER=3.9
+PY_LABEL=py39_
+CONDA_MD5=8c69f65a4ae27fb41df0fe552b4a8a3b
+
+# CONDA_VER=4.10.3
 # PY_VER=3.8
 # PY_LABEL=py38_
-# CONDA_MD5=d63adf39f2c220950a063e0529d4ff74
+# CONDA_MD5=14da4a9a44b337f7ccb8363537f65b9c
 
-# CONDA_VER=4.8.3
+# CONDA_VER=4.10.3
 # PY_VER=3.7
 # PY_LABEL=py37_
-# CONDA_MD5=751786b92c00b1aeae3f017b781018df
+# CONDA_MD5=9f186c1d86c266acc47dbc1603f0e2ed
 
 # CONDA_VER=4.5.4
 # PY_VER=3.6
 # CONDA_MD5=a946ea1d0c4a642ddf0c3a26a18bb16d
 
+
+
+
+## test
+
 HOST_UID=1000
+
+DISTRO=alpine
+PACKAGE_MANAGER=apk
+
+# DISTRO=debian
+# PACKAGE_MANAGER=apt
