--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -109,6 +109,7 @@ jobs:
       PY_VER: ${{matrix.py_ver}}
       PACKAGE_MANAGER: ${{matrix.package_manager}}
     steps:
+      - uses: actions/checkout@v2
       - name: Fetch image artifact
         uses: actions/download-artifact@v2
         with:
