--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -114,7 +114,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: ${{format('{0}-py{1}-{2}', matrix.conda_ver, matrix.py_ver, matrix.distro)}}
-      - name: Verify image
+      - name: Run integration tests
         run: |
           export HOST_UID=$(id -u)
           docker load < "${CONDA_VER}-py${PY_VER}-${DISTRO}.tar.gz"
